--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,3 +34,24 @@
 
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.div-table {
+    width: 100%; 
+    display: table;
+}
+
+.right-image {
+    float: right; 
+    margin-left: 20px; 
+    margin-right: 20px;
+}
+
+.left-image {
+    float: left; 
+    margin-left: 20px; 
+    margin-right: 20px;
+}
+.image-margin {
+    margin-left: 20px; 
+    margin-right: 20px;
+}
